<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SalonActivity">

    <TextView
        android:id="@+id/nombreSalonTV"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="#336A99"
        android:gravity="bottom|center|center_vertical"
        android:paddingBottom="10dp"
        android:text="Programacion Orientada a Objetos"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/actionBarDown"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#336A99"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/postsBTN"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:contentDescription="@string/hint_posts_BTN"
            app:srcCompat="@drawable/ic_baseline_list_alt_24"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/filesBTN"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:contentDescription="@string/hint_files_BTN"
            app:srcCompat="@drawable/ic_baseline_folder_24"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/addBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_button"
            android:contentDescription="@string/hint_add_BTN"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_baseline_add_24"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/chatBTN"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:contentDescription="@string/hint_chat_BTN"
            app:srcCompat="@drawable/ic_chat_svgrepo_com"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/tasksBTN"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:contentDescription="@string/hint_tasks_BTN"
            app:srcCompat="@drawable/ic_baseline_assignment_24"
            tools:ignore="VectorDrawableCompat" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/actionBarDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreSalonTV"
        app:layout_constraintVertical_bias="0.478"
        tools:listitem="@layout/post_preview"/>

</androidx.constraintlayout.widget.ConstraintLayout>