<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SalonActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/salonLY"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="#D6D6D6"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/salonNameTB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/textbox_container"
            android:ems="10"
            android:hint="@string/hint_name_salon"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="#606060"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/salon_name_TB"
            android:textColor="#606060"
            app:layout_constraintBottom_toTopOf="@+id/salonNameTB"
            app:layout_constraintStart_toStartOf="@+id/salonNameTB" />

        <ImageButton
            android:id="@+id/closeBTN2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="#00FFFFFF"
            android:padding="10dp"
            android:tint="#606060"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_close_24"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/salon_title"
            android:textColor="#606060"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/actionBarDown"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#AE4265"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/homeBTN"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/ic_baseline_home_24" />

            <ImageButton
                android:id="@+id/guauBTN"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/ic_baseline_pets_24" />

            <ImageButton
                android:id="@+id/newGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_button"
                app:srcCompat="@drawable/ic_baseline_supervised_user_circle_24" />

            <ImageButton
                android:id="@+id/dmBTN"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/ic_chat_svgrepo_com" />

            <ImageButton
                android:id="@+id/profileBTN"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/ic_baseline_mood_24" />

        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <FrameLayout
        android:id="@+id/home_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/salonLY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>